# template-project

./: .gitignore  README.md
ansible-roles/: README.md  ansible.cfg  main.yml
ansible-roles/var/: global.yml
ant-mvn-project-template/: build.xml
c&cpp/clion/: boost.txt  readme.txt
c&cpp/clion/c_app_inst/: CMakeLists.txt
c&cpp/clion/c_include_header/: CMakeLists.txt  hello.c
c&cpp/clion/c_include_header/include/: hello.h
c&cpp/clion/c_link_lib/: CMakeLists.txt  main.c
c&cpp/clion/c_link_lib/include/: hello.h
c&cpp/clion/c_link_lib/src/: hello.c
c-custom-lib/: string-split.cc
c-custom-lib/boost-asio/: async-io.cc  aync-server.cc  client.cc  sync-server.cc  thread-pool.cc  udp-async-server.cc  udp-client.cc  udp-sync-server.cc  udp-tcp-server.cc
cdh-kerberos-template/: pom.xml
cdh-kerberos-template/hadoop-conf/: hdfs-site.xml
cdh-kerberos-template/hbase-conf/: core-site.xml  hbase-site.xml  hongwang-cdh.keytab  krb5.conf
cdh-kerberos-template/hive-conf/: hive.keytab
cdh-kerberos-template/kafka-conf/: kafka-jaas.conf  krb5.conf
classloader-mvvj/: pom.xml  readme.txt
classloader-mvvj/mvvj-app01/: pom.xml
classloader-mvvj/mvvj-app02/: pom.xml
classloader-mvvj/mvvj-common/: pom.xml
classloader-mvvj/mvvj-main-app/: pom.xml
clean-projects/: go.mod  go.sum
clean-projects/cmd/: main.go
code-automate/: README  clean.sh  common.sh  member.list  run.sh  test.sh
consul/: readme.txt
coverage-test-demo/: ci_settings.xml  pom.xml
coverage-test-multi-module/: pom.xml  readme.txt
coverage-test-multi-module/one/: pom.xml
coverage-test-multi-module/two/: pom.xml
cpp/: C开发环境搭建.txt  plan.txt  感知下时间.txt
cpp/boost-demo/: CMakeLists.txt  boost_lambda.cpp  boost_thread_pool.cpp  main.cpp
cpp/cuda-app/: CMakeLists.txt
cpp/grpc-demo/: CMakeLists.txt  README.txt
cpp/gtest-demo/: CMakeLists.txt
cpp/gtest-demo/src/: CMakeLists.txt  hello.cpp  main.cpp
cpp/gtest-demo/src/include/: hello.h
cpp/gtest-demo/tests/: CMakeLists.txt
cpp/gtest-vcpkg/: CMakeLists.txt
cpp/gtest-vcpkg/src/: hello.cpp  hello_test.cpp
cpp/gtest-vcpkg/src/include/: hello.h
cpp/log-demo/: CMakeLists.txt  main.cpp
cpp/spdlog-vcpkg/: CMakeLists.txt  main.cpp
cpp/strings/: CMakeLists.txt  main.cpp
css/: lesson01.html  readme.txt
docs-sphinxpdf-template/: README.txt
docs-sphinxpdf-template/source/: conf.py  index.rst
dubbo-template/: pom.xml
dubbo-template/hello-service-api/: pom.xml
dubbo-template/hello-service-consumer/: pom.xml
dubbo-template/hello-service-provider/: pom.xml
envoy/: readme.txt
flink-table-template/: pom.xml
flink-template/: pom.xml
flowable/flowable-demo/: pom.xml
hive-udf/: pom.xml
invoke-cmd-template/: pom.xml
java-lib/datetime/: datetime.java
java-lib/http-client/: demo.java
java-lib/正则/: re.java
java-upload-jar/: component.pom.xml  pom.xml
k8s-template/: nginx-deployment.yaml  nginx-service.yaml
k8s/Istio/: readme.txt
k8s/LoadBalancer/: readme.txt
k8s/helm-lesson/: readme.txt
kafka-app-template/: pom.xml
kerberos-checker/: config.properties  pom.xml
kerberos-checker/hbase-conf/: krb5.conf  my.keytab
krakend/endpoints/: api.py  krakend.json
maven-plugins/maven-assembly-plugin/: bin.xml  project.xml  src.xml
metadata/: event-of-metadata.sql  postgresql-metadata.sql  tab-field-metadata-MYSQL.sql  tab-field-metadata-ORACLE.sql  tab-field-metadata-POSTGRESQL.sql  tab-field-metadata-SQLSERVER.sql  tab-metadata-MYSQL.sql  tab-metadata-ORACLE.sql  tab-metadata-POSTGRESQL.sql  tab-metadata-SQLSERVER.sql  tab_field_meta_diff.sql  tab_meta_diff.sql
minio-demo/: pom.xml
mockhttpserver-template/: pom.xml
modeshape-template/: config-template.json  pom.xml  readme.txt
mongodb/: readme.txt
nacos-template/: master.properties  pom.xml  readme.txt
nifi/: readme.txt
nifi/custom-processor/: pom.xml
nodejs/pm2/: readme.txt
openfeign-template/: dag01.json  pom.xml
ora-template/: pom.xml
oracle/: container.txt  readme.txt  sqlplus.txt  常用系统表视图.txt
properties-template/: README.md  pom.xml
python-antlr/orax/: MANIFEST.in  OraxListener.py  PlSqlLexer.py  PlSqlParserListener.py  main.py  readme.txt  requirements.txt  setup.cfg  setup.py  test.py
python-antlr/orax/docs/source/: conf.py  index.rst  使用.md  安装.md  开发.md
python-antlr/orax/examples/: batch_mode.txt  demo3.sql  demo4.sql  file_mode.txt
python-antlr/orax/orax/: OraxImp.py  OraxListener.py  PlSqlLexer.py  PlSqlParserListener.py  __main__.py
python-antlr/orax/orax-offline/: requirements.txt
python-argparse-template/: coffee.py
python-basic/: conda.txt
python-behave/: fixtures.py  readme.txt
python-django/: readme.txt
python-project-template/: requirements-dev.txt
python-scrapy/: readme.txt  特征.txt
python-sentry/: readme.txt
python-template-with-full-deps/: MANIFEST.in  readme.md  release.py  setup.py  tox.ini
run-sql/: pom.xml
scala/: readme.txt
scoop/: readme.txt
shell-repo/: bash运行进程并获取进程的pid.sh  jsonlist2jsons.py  ora2es.sh  日期处理.sh  编译代码demo.sh
simple-django/: hello.py  readme.txt
spark-jdbc/: pom.xml  readme.txt
spark-sql-demo/: README.md  pom.xml
spark-template/: pom.xml
spring-aop/: pom.xml  readme.txt
spring-hello-app/: pom.xml  readme.txt
spring-rw-jpa/: pom.xml  readme.txt
spring-security-oauth2/: README.md  pom.xml
springboot-console-app-template/: pom.xml
springboot-custom-layout/: pom.xml
springboot-https-rest/: README.md
springboot-jpa-template/: pom.xml
springboot-mybatis-template/: pom.xml
springboot-profiles-template/: README.md
springboot-rest-template/: pom.xml
springboot-shiro-template/: pom.xml
springboot-swagger-template/: pom.xml
springcloude-gateway/: readme.txt
sprint-security-template/: pom.xml  readme.txt  认证的简单代码.java
sql-autocomplete/: README.docx  pom.xml
sqlite/: cache.txt  connection.txt  lock.txt  memdb.txt  pager.txt  readme.txt  wal.txt  内存映射的使用.docx
storm-trident-template/: README.md  pom.xml
tika-template/: pom.xml
websocket/: readme.txt
websocket-template/: pom.xml
wsdl-template/: pom.xml  readme.txt
(+983 files in other folders)
