[metadata]
name = orax
version = 0.1
description = Tools to replace table names and field names in oracle sql script.
url = https://www.hongwangweb.com/
author = canbin.zhang
author_email = canbin.zhang@qq.com


[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    antlr4-python3-runtime==4.8
    click==8.0.1
